# Shipyard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
shipyard/: __init__.py  agents.py  ai.py  bot.py  config.py  demo_seed.py  media.py  planning.py  server.py  state.py  worktrees.py
tests/: test_config.py  test_planning.py  test_state.py
