[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipyard"
version = "0.1.0"
description = "Telegram bot that turns voice notes and sketches into project planning inputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
shipyard-bot = "shipyard.bot:main"
shipyard-board = "shipyard.server:main"
shipyard-seed-demo = "shipyard.demo_seed:main"

[tool.setuptools.package-data]
shipyard = ["static/*"]

[tool.setuptools.packages.find]
include = ["shipyard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
